# ProjetoIA

./: .dockerignore  Dockerfile  projeto.py  pyproject.toml
app/: api.py  main.py
